# eora-rag-telegram-bot

./: Dockerfile  README.md  pyproject.toml
app/: config.py  ingest.py  llm.py  main.py  prompts.py  rag_pipeline.py  store.py  utils.py  web_scraper.py
eval/: evaluate.py  qa_pairs.yaml
ops/: docker-compose.yml
scripts/: run_local.sh
